--- a/gb/21/6/4/n12997493.md
+++ b/gb/21/6/4/n12997493.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qjbvfo363/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qjbvfo363/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qjbvfo363/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qjbvfo363/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qjbvfo363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qjbvfo363/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qjbvfo363/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qjbvfo363/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qjbvfo363/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qjbvfo363/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qjbvfo363/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qjbvfo363/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qjbvfo363/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qjbvfo363/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qjbvfo363/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qjbvfo363/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qjbvfo363/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qjbvfo363/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qjbvfo363/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qjbvfo363/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qjbvfo363/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qjbvfo363/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qjbvfo363/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qjbvfo363/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【楼市动向】七大利淡因素孰真孰假？（上）</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id12997516-a4-1@1200x1200-600x366.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2021年06月04日讯】（大纪元记者勤智香港报导）反映<ahref="https://github.com/qjbvfo363/djy/blob/master/gb/tag/%E4%BA%8C%E6%89%8B%E6%A5%BC%E4%BB%B7.md#1">二手楼价</a>走势的<ahref="https://github.com/qjbvfo363/djy/blob/master/gb/tag/%E4%B8%AD%E5%8E%9F%E5%9F%8E%E5%B8%82%E9%A2%86%E5%85%88%E6%8C%87%E6%95%B0.md#1">中原城市领先指数</a>（CCL）最新报184.49，按周微跌0.09%。分区指数除新界西再升0.12%外，港岛、九龙及新界东分别下跌0.96%、1.01%及0.01%。其余领先指数个别发展，<ahref="https://github.com/qjbvfo363/djy/blob/master/gb/tag/%E5%A4%A7%E5%9E%8B%E5%8D%95%E4%BD%8D.md#1">大型单位</a>续升1.3%，中小型单位及大型屋苑分别回调0.35%及0.57%。中原经纪人指数（CSI）最新报73.1，按周再升1.24个百分点。</p>
+	<p>【大纪元2021年06月04日讯】（大纪元记者勤智香港报导）反映<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%8C%E6%89%8B%E6%A5%BC%E4%BB%B7.md#1">二手楼价</a>走势的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%8E%9F%E5%9F%8E%E5%B8%82%E9%A2%86%E5%85%88%E6%8C%87%E6%95%B0.md#1">中原城市领先指数</a>（CCL）最新报184.49，按周微跌0.09%。分区指数除新界西再升0.12%外，港岛、九龙及新界东分别下跌0.96%、1.01%及0.01%。其余领先指数个别发展，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A4%A7%E5%9E%8B%E5%8D%95%E4%BD%8D.md#1">大型单位</a>续升1.3%，中小型单位及大型屋苑分别回调0.35%及0.57%。中原经纪人指数（CSI）最新报73.1，按周再升1.24个百分点。</p>
 <h2>政府制造供应断层</h2>
-<p><ahref="https://github.com/qjbvfo363/djy/blob/master/gb/tag/%E4%BA%8C%E6%89%8B%E6%A5%BC%E4%BB%B7.md#1">二手楼价</a>指数结束五连升，但调整幅度轻微，六大指数偏软，<ahref="https://github.com/qjbvfo363/djy/blob/master/gb/tag/%E5%A4%A7%E5%9E%8B%E5%8D%95%E4%BD%8D.md#1">大型单位</a>及新界西支撑大市，前者两周累升3.4%，后者创近两年新高，距离历史高位只差2.3%。发展商趁旺市陆续推盘。恒基位于鸭脷洲大街的逸南，以迷你单位细银码招徕，上周开售50个单位，平均呎价达2.5万，数小时沽清。新世界大围柏傲庄III，首推连加推182伙，已收逾1.6万票，成为今年新盘票王，发展商加价7%加推149，抢购潮再现。二手屋苑亦频频出现破顶成交，但交投量稍有回落。政府推资助房屋亦时间巧合，绿置居开始拣楼。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%8C%E6%89%8B%E6%A5%BC%E4%BB%B7.md#1">二手楼价</a>指数结束五连升，但调整幅度轻微，六大指数偏软，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%A4%A7%E5%9E%8B%E5%8D%95%E4%BD%8D.md#1">大型单位</a>及新界西支撑大市，前者两周累升3.4%，后者创近两年新高，距离历史高位只差2.3%。发展商趁旺市陆续推盘。恒基位于鸭脷洲大街的逸南，以迷你单位细银码招徕，上周开售50个单位，平均呎价达2.5万，数小时沽清。新世界大围柏傲庄III，首推连加推182伙，已收逾1.6万票，成为今年新盘票王，发展商加价7%加推149，抢购潮再现。二手屋苑亦频频出现破顶成交，但交投量稍有回落。政府推资助房屋亦时间巧合，绿置居开始拣楼。</p>
 <p>“白居二”又同时推出，炒热居屋二手市场。楼价大有短期破顶之势。差饷物业估价署公报最新楼价指数连升4个月，创21个月新高，距历史高位只差1.5%，当中100平方米或以上大型单位按年升幅5.5%，跑赢中小型单位，意味豪宅受捧。疫情令贫富悬殊加剧，富者愈富，权贵毫不在乎以超高价入市，未通关大陆客已利用各种方法入市且占成交近一成，代理称不少大陆客正部署通关时涌港扫货。</p>
 <p>房屋板块的另一端却惨况加剧。房委会公布数字显示，过去财政年度公屋及绿置居落成量只有不足6千3百伙，创十年新低，较前年预测数字低近两成。政府未有向市民清楚交代理由，且年年高估落成量，就是系统性问题。公屋供应未来五年情况难以改善，24年甚至出现断层，轮候时间势必短期超越6年。笔者多次指出，政府的所谓房策并非什么策略，而是数字游戏，方便政府利用滚动十年目标不断走数，拖延建屋而不用问责。笔者亦多次警告，建屋是资助房屋慢私楼快，政府一刀切将私人住宅比例由4成减至3成，又刻意撤回一手空置税，私楼供应势必缩减，增加资助房屋却追不上，造成市场混乱，价格借机炒上，如今不幸言中。十年来政府口口声声房策为市民住屋福祉，政策却反其道而行，楼价就是最有力的证明。</p>
-<h2><ahref="https://github.com/qjbvfo363/djy/blob/master/gb/tag/%E4%BA%BA%E5%8F%A3%E8%80%81%E5%8C%96.md#1">人口老化</a>需求未减</h2>
-<p>之前有亲政府报章刊登分析文章，认为楼市已出现七大利谈因素。既然有人提出，值得仔细分析一下其论点是否属实。文章首先提出的就是<ahref="https://github.com/qjbvfo363/djy/blob/master/gb/tag/%E4%BA%BA%E5%8F%A3%E8%80%81%E5%8C%96.md#1">人口老化</a>及生育率低削弱需求。的而且确，中共插手特区事务，市民对前景感到悲观。楼价连续11年成全球最难负担，政府十年来令房屋问题恶化，居住环境细贵挤，自然迟婚及减少生育，以至特区出生率几乎全球最低。结婚率亦大跌，离婚率则大升，理论上新家庭住屋需求亦降。特区面对老龄海啸更是不争的事实，每年死亡人数早已超越出生人口。</p>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%BA%E5%8F%A3%E8%80%81%E5%8C%96.md#1">人口老化</a>需求未减</h2>
+<p>之前有亲政府报章刊登分析文章，认为楼市已出现七大利谈因素。既然有人提出，值得仔细分析一下其论点是否属实。文章首先提出的就是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%BA%E5%8F%A3%E8%80%81%E5%8C%96.md#1">人口老化</a>及生育率低削弱需求。的而且确，中共插手特区事务，市民对前景感到悲观。楼价连续11年成全球最难负担，政府十年来令房屋问题恶化，居住环境细贵挤，自然迟婚及减少生育，以至特区出生率几乎全球最低。结婚率亦大跌，离婚率则大升，理论上新家庭住屋需求亦降。特区面对老龄海啸更是不争的事实，每年死亡人数早已超越出生人口。</p>
 <p>上述推论听似合理，但为何特区人口仍然有增长？答案就是输入人口。特区政府有着各种各样的输入人口政策，单程证、输入内地专才、输入高科技专才、输入留学生、非本地毕业生留港计划，绝大部分利用这些计划的人都是来自中国大陆，支持住宅需求及租务。输入人口有明确的政治目的，就是利用“新香港人”取代现有香港人及价值观，维持劳动力增长，保持竞争力。</p>
 <p>市民多次要求政府先减少输入人口舒缓住屋需求，政府却不但不听，而且加大力度，输入人口早就被推至中共利益层面。如今议会变成傀儡，未来政府更不用向市民交代，输入人口只会加快。政府正准备进行各项填海大计，包括“明日大屿”世纪填海，目的是扩充容量，迎接输入人口大计。离婚及不结婚令家庭式住屋需求下降，却衍生单身住屋需求。面对老龄海啸但特区老人同时是世界最长寿，意味人均占有居所的时间更长。由于政府安老政策失败，安老居所设施奇缺，意味长者居住的单位没有系统性流转，令房屋使用效率下降，平均住户人数下跌。长策估算住屋需求的主要失误是住户平均人数下降，导致需求低估，楼价节节上升。人口老化与出生率低不能简单换算成需求减弱。</p>
 <h2>服务中共撑起特区</h2>
@@ -25,41 +25,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/4/23/n12899184.md#1">【楼市动向】一手空置税政府进退失据</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/5/7/n12929764.md#1">【楼市动向】沙岭事件预视规划失主导</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/5/14/n12947767.md#1">【楼市动向】?房问题未解太空舱又兴</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/5/28/n12981041.md#1">【楼市动向】收回三幅地遗下一堆问号</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/4/23/n12899184.md#1">【楼市动向】一手空置税政府进退失据</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/7/n12929764.md#1">【楼市动向】沙岭事件预视规划失主导</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/14/n12947767.md#1">【楼市动向】?房问题未解太空舱又兴</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/28/n12981041.md#1">【楼市动向】收回三幅地遗下一堆问号</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/17/n11660999.md#1" target="_blank">林辉：承天命演绎忠义豪情《水浒》为何被批？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385414.md#1" target="_blank">20年前 澳洲西人为法轮功赴京上访（下）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10749135.md#1" target="_blank">林辉：邓小平女儿指北大曾变成法西斯集中营</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/6/n11167851.md#1" target="_blank">天主教新闻网：中共的群体灭绝罪行</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/5/28/n12983090.md#1">【未解之谜】神话还是真相？三星堆与山海经</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/5/26/n12975963.md#1">【命理】预知死后家衰 他怎样为家人保留遗产？</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/5/27/n12980529.md#1">【未解之谜】胎记隐藏的秘密</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/1/n12990856.md#1">他们生前为乞丐 为何死后能升天</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/5/30/n12986411.md#1">被遗忘的百年历史（I）1920至1950</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/3/n12996059.md#1">【唐浩视界】煽动台疫苗之乱 北京藏3图谋</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/2/n12994576.md#1">【新闻看点】广州升级防控 中共威胁“核战”</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/3/n12995024.md#1">【拍案惊奇】福西大量电邮公开 爆三大惊人内幕</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/1/n12991925.md#1">习近平请反美专家为政治局委员上课 引争议</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/1/n12989787.md#1">美战舰被一群UFO围住 国防部确认视频真实</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/1/n12990215.md#1">【拍案惊奇】零号病人再被揭 王沪宁或被顶替？</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/1/n12992258.md#1">周星驰难相处？《新喜剧之王》主角还原实况</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/2/n12993299.md#1">疫苗争议、名嘴吊唁花篮 柯宇纶发声挺医护</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/1/n12989854.md#1">刘德华晒录歌视频 素颜朝天下巴皱纹明显</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/2/n12992813.md#1">矢吹奈子坦言对身高自卑 回应粉丝提问获赞</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/5/31/n12989156.md#1">张艺谋曾因超生遭罚 网友：敢向党讨回748万？</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/1/n12991223.md#1">台湾国产疫苗怎么样？专家解析安全性、预期效力</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/1/n12990286.md#1">像另外空间的入口 在欧洲城市出现</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/2/n12993347.md#1">为何在飞行时 正副机师不能吃相同餐点？</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/6/2/n12993685.md#1">【重播】七大新冠疫苗 最新对比大公开</a></li>
-<li><a href="https://github.com/qjbvfo363/djy/blob/master/gb/21/5/28/n12982397.md#1">菇类可增强免疫力 每天吃还能降45%罹癌风险</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qjbvfo363/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qjbvfo363/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/4/n12997493.htm">【楼市动向】七大利淡因素孰真孰假？（上）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/4/n12997493.htm">【楼市动向】七大利淡因素孰真孰假？（上）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qjbvfo363/djy/blob/master/gb/21/6/4/n12997493.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qjbvfo363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qjbvfo363/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qjbvfo363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qjbvfo363/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qjbvfo363/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/6/4/n12997493.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
